Fixed notifications covering some elements

--- a/notifications.css
+++ b/notifications.css
@@ -1,4 +1,5 @@
 #notification-area {
+  pointer-events: none;
   position:fixed;
   top:0px;
   right:10px;
